tests/ui/transmutability/primitives/unit.next.stderr
error[E0277]: `()` cannot be safely transmuted into `u8`
  --> $DIR/unit.rs:31:35
   |
LL |     assert::is_transmutable::<(), u8>();
   |                                   ^^ the size of `()` is smaller than the size of `u8`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/unit.rs:16:14
   |
LL |       pub fn is_transmutable<Src, Dst>()
   |              --------------- required by a bound in this function
LL |       where
LL |           Dst: TransmuteFrom<Src, {
   |  ______________^
LL | |             Assume::ALIGNMENT
LL | |                 .and(Assume::LIFETIMES)
LL | |                 .and(Assume::SAFETY)
LL | |                 .and(Assume::VALIDITY)
LL | |         }>
   | |__________^ required by this bound in `is_transmutable`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
